--- a/app.json
+++ b/app.json
@@ -1,31 +1,44 @@
 {
   "expo": {
-    "name": "Expo Router Typescript",
-    "slug": "expo-router-typescript",
-    "scheme": "app",
+    "name": "dynamic-timer",
+    "slug": "dynamic-timer",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/app-icon.png",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "dark",
+    "scheme": "dynamic-timer",
     "splash": {
-      "image": "./src/assets/images/splash.png",
-      "backgroundColor": "#222"
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#000"
     },
-    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": false
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/images/app-icon.png",
-        "backgroundColor": "#222"
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#000"
       },
-      "package": "com.haytherecharlie.exporoutertypescript"
+      "package": "com.lospoy.dynamictimer"
     },
     "web": {
-      "favicon": "./src/assets/images/app-icon.png",
-      "bundler": "metro"
+      "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
-    "extra": { "router": { "origin": false } }
+    "plugins": [
+      "expo-router"
+    ],
+    "experiments": {
+      "typedRoutes": true,
+      "tsconfigPaths": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "aba78b33-34e9-467b-83ea-10e603a35fdb"
+      }
+    }
   }
 }
