--- a/eas.json
+++ b/eas.json
@@ -1,3 +1,18 @@
 {
-  "build": { "preview": { "ios": { "simulator": true } }, "production": {} }
+  "cli": {
+    "version": ">= 10.0.0"
+  },
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {}
+  },
+  "submit": {
+    "production": {}
+  }
 }
