--- a/package.json
+++ b/package.json
@@ -1,66 +1,37 @@
 {
-  "name": "expo-router-typescript",
+  "name": "dynamic-timer",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
-    "build:android": "npx eas-cli build -p android --profile preview --local",
-    "build:ios": "npx eas-cli build -p ios --profile preview --local",
-    "build:web": "npx expo export --platform web -c --output-dir web-build",
-    "dev": "npm run start",
-    "format": "npx prettier src --write",
-    "lint": "eslint src/**/*.tsx src/**/*.ts",
-    "lint:fix": "npm run lint -- --fix",
-    "offline": "expo start --offline",
-    "publish:expo": "npx eas-cli update",
-    "publish:web": "firebase deploy --only hosting",
-    "serve:app": "expo start --dev-client",
-    "serve:web": "npx serve web-build --single",
-    "setup": "npm ci --silent",
-    "start": "expo start --go",
-    "test": "jest",
-    "upgrade": "expo upgrade",
-    "web": "expo start --web --no-dev --host localhost --port 3000"
-  },
-  "overrides": {
-    "semver": ">=7.5.4"
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "dev": "expo start --localhost --android"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
-    "expo": "~50.0.17",
-    "expo-dev-client": "~3.3.11",
-    "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.14",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.18",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.16",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.10",
-    "styled-components": "^5.3.11"
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "expo-blur": "~13.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.4.3",
-    "@types/jest": "^29.5.11",
-    "@types/react": "~18.2.46",
-    "@types/react-test-renderer": "^18.0.7",
-    "@types/styled-components": "^5.1.34",
-    "@types/styled-components-react-native": "^5.2.5",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "jest": "^29.7.0",
-    "jest-expo": "~50.0.4",
-    "prettier": "^3.1.1",
-    "react-test-renderer": "^18.2.0",
-    "typescript": "^5.3.3"
-  }
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.3.2",
+    "typescript": "^5.1.3"
+  },
+  "private": true
 }
